@@ -1,3 +1,9 @@
+2001-11-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* mime-w3m.el (mime-w3m-keymap-property): New macro.
+	(mime-w3m-preview-text/html, kill-new): Use the above macro
+	instead of `w3m-static-if'.
+
 2001-11-16  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-select-buffer-window-ratio): New user option.
